<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8dp"
        tools:context=".ui.registro.RegistroFragment">

        <TextView
            android:id="@+id/textView3"
            android:text="Registro de usuarios"
            app:layout_constraintBottom_toTopOf="@+id/mail_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/label_text_style" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/pass_layout"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/nombres_layout"
            app:layout_constraintTop_toBottomOf="@+id/mail_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_login" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombres_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/apellidos_layout"
            app:layout_constraintTop_toBottomOf="@+id/pass_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_nombre" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellidos_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/boton_registro"
            app:layout_constraintTop_toBottomOf="@+id/nombres_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_apellido" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/boton_registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registrarse_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apellidos_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>